fix border radius of cards on mobile phone

--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -194,6 +194,8 @@
         // position: relative;
         background-color: $color-white;
         box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15); // move box shadow to whole card
+        border-radius: 3px;
+        overflow: hidden;
 
         &__side {
             height: $card-height;
